--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,12 +1,13 @@
 footer {
   min-height: 3rem;
-  background-color: #2f2e412e;
+  color: #e1ba6b;
+  background-color: #1a2030;
   display: flex;
   justify-content: center;
   align-items: center;
 
   a {
     text-decoration: none;
-    color: #2f2e41;
+    color: #e1ba6b;
   }
 }
