--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+
+@import '../node_modules/primeflex/primeflex.css';
+@import '../node_modules/primeflex/primeflex.min.css';
+@import '../src/theme/theme.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
