--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -1,22 +1,41 @@
-@import '../../theme/theme.scss';
+// @import '../../theme/theme.scss';
+
+@import '../../../node_modules/primereact/resources/themes/viva-light/theme.css';
 
 .light {
-  background-image: linear-gradient(0deg, #2f2e4180, #ee786380) !important;
 }
 
 .auth-container {
+  height: calc(100vh - 48px);
+  background-image: url('../../assets/fundo.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0 !important;
 
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 5rem;
 
-  & .login-container {
+  .login-container {
     border-radius: 0.5rem;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #e2975663;
+    color: #1a2030;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 0 !important;
     align-items: center;
     min-width: 355px;
-    max-width: 360px;
+    width: 22rem;
+    height: 466px;
+
+    & img {
+      width: 6rem;
+      margin-top: -3rem;
+    }
   }
 
   & .login {
@@ -24,18 +43,15 @@
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    padding: 1.5rem;
+    padding: 0 1.5rem;
+   
+
+    & h3 {
+      text-align: center;
+      margin: 0;
+    }
     .p-button {
       width: 8rem;
-    }
-  }
-
-  & .img-auth-container {
-    display: flex;
-    justify-content: center;
-
-    img {
-      width: 90%;
     }
   }
 
@@ -43,6 +59,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    width: 100% !important;
 
     label {
       padding-left: 0.2rem;
@@ -57,59 +74,43 @@
       font-weight: 600;
 
       &:hover {
-        color:  #ee7863 !important;
+        color: #fa9851 !important;
       }
     }
   }
 
   & .sign-up {
-    background-color: #2f2e4166;
+    color: #deb38e;
+    background-color: #1a2030;
     height: 2rem;
-    color: #fff;
     width: 100%;
     border-radius: 0 0 0.5rem 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1.5rem;
-    gap: 1rem;
+    padding: 1.5rem 1rem;
+    gap: 0.5rem;
 
     a {
-      color: #2f2e41;
+      color: #fa9851;
+
       padding: 0.2rem 0.5rem;
       border-radius: 0.2rem;
       font-weight: 600;
       cursor: pointer;
       &:hover {
-        background-color: #2f2e4185;
+        color: #fa9851;
         color: #fff;
       }
 
       &:active {
-        color: #ee7863;
+        color: #fa9851;
       }
     }
   }
 
-  @media screen and (max-width: 576px) {
-    & .img-auth-container {
-      display: none;
-    }
-  }
-
-  @media screen and (min-width: 576px) and (max-width: 768px) {
-    .img-auth-container {
-      img {
-        width: 30%;
-      }
-    }
-  }
-
-  @media screen and (min-width: 768px) and (max-width: 992px) {
-    .img-auth-container {
-      img {
-        width: 90%;
-      }
-    }
+  @media screen and (max-width: 900px) {
+    justify-content: center;
+    padding: 1rem !important;
   }
 }
